Fix footer content alignment #34

--- a/frontend/src/app/components/home/home.component.sass
+++ b/frontend/src/app/components/home/home.component.sass
@@ -146,12 +146,14 @@
       padding: 1em
 
     #right-footer
-      align-items: flex-start
+      align-items: center
       display: inline-flex
       height: 100%
       justify-content: space-around
       width: 100%
-      padding-top: 1em
+
+      p
+        margin: 0
 
       a
         color: white
